--- a/templates/edit_comment.html
+++ b/templates/edit_comment.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
-{% block action %}/comment/{{ comment.id }}/edit{% endblock %}
+{% block action %}/comment/{{ comment.id }}/{{ question }}/edit{% endblock %}
 {% block message %}{{ comment.message }}{% endblock %}
 {% block button %}{{ title }}{% endblock %}
