--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,10 @@
     body{
             text-align: center;
         }
+
+    a:visited, a:link {
+        text-decoration: none;
+    }
 </style>
 <head>
     <meta charset="UTF-8">
