--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="/static/style.css">
 <style>
     body{
             text-align: center;
@@ -31,6 +32,6 @@
     </form>
     <br>
     <br>
-    <a href="/">Back to main page</a>
+    {% block back_button %}{% endblock %}
 </body>
 </html>
