--- a/templates/edit_comment.html
+++ b/templates/edit_comment.html
@@ -3,3 +3,8 @@
 {% block message %}Message:{% endblock %}
 {% block message_area %}{{ comment.message }}{% endblock %}
 {% block button %}{{ title }}{% endblock %}
+{% block back_button %}
+    <form action="/question/{{ question }}" method="post">
+        <button type="submit">Back to question</button>
+    </form>
+{% endblock %}
