--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,9 @@
             {% endfor %}
         </table><br>
         <div>
-            <a href="/list">All questions</a>
+            <form action="/list">
+                <button type="submit">All questions</button>
+            </form>
         </div>
         <footer>
             <br>
