--- a/templates/add_answer.html
+++ b/templates/add_answer.html
@@ -5,3 +5,8 @@
 {% block message %}Message:{% endblock %}
 {% block add_file %}<input type="file" name="file" id="file">{% endblock %}
 {% block button %}{{ title }}{% endblock %}
+{% block back_button %}
+    <form action="/question/{{ question_id }}" method="post">
+        <button type="submit">Back to question</button>
+    </form>
+{% endblock %}
