--- a/templates/add_question.html
+++ b/templates/add_question.html
@@ -11,3 +11,8 @@
 {% block message %}Message:{% endblock %}
 {% block add_file %}<input type="file" name="file" id="file">{% endblock %}
 {% block button %}{{ title }}{% endblock %}
+{% block back_button %}
+    <form action="/" method="post">
+        <button type="submit">Back to main page</button>
+    </form>
+{% endblock %}
