--- a/templates/add_tag.html
+++ b/templates/add_tag.html
@@ -4,3 +4,8 @@
 {% block action %}/question/{{ question_id }}/new-tag{% endblock %}
 {% block message %}Tag name:{% endblock %}
 {% block button %}{{ title }}{% endblock %}
+{% block back_button %}
+    <form action="/question/{{ question_id }}" method="post">
+        <button type="submit">Back to question</button>
+    </form>
+{% endblock %}
