--- a/templates/edit_question.html
+++ b/templates/edit_question.html
@@ -12,3 +12,8 @@
 {% block message_area %}{{ question.message }}{% endblock %}
 {% block add_file %}<input type="file" name="file" id="file">{% endblock %}
 {% block button %}{{ title }}{% endblock %}
+{% block back_button %}
+    <form action="/question/{{ question.id }}" method="post">
+        <button type="submit">Back to question</button>
+    </form>
+{% endblock %}
