--- a/templates/search.html
+++ b/templates/search.html
@@ -34,7 +34,7 @@
         <div>
             <form action="/search">
                 <label for="search-question-input">Search question:</label>
-                <input id="search-question-input" type="search" name="q" width="100px">
+                <input id="search-question-input" type="search" name="q" width="100px" required>
                 <button type="submit">Search</button>
             </form>
         </div><br>
