made enters apeared in text, extracted some references to function in util. added margin to message on question page

--- a/static/style.css
+++ b/static/style.css
@@ -10,6 +10,8 @@ a:visited, a:link {
 }
 #message{
     font-size: 35px;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 #message2{
     font-size: 20px;
