--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
+    {% if login %}
     <div id="image">
         <a href="/"><img src="/static/logo-small.png" alt="ask mate logo"></a>
         <br>
@@ -33,5 +34,8 @@
     <br>
     <br>
     {% block back_button %}{% endblock %}
+    {% else %}
+    <meta http-equiv="refresh" content="0; URL=/" />
+    {% endif %}
 </body>
 </html>
