--- a/templates/users_list.html
+++ b/templates/users_list.html
@@ -4,6 +4,9 @@
         body{
              text-align: center;
         }
+        th {
+             text-align: center;
+        }
 </style>
 <head>
     <link rel="stylesheet" href="static/style.css">
@@ -12,7 +15,7 @@
 </head>
     <body>
         <a href="/"><img src="/static/logo-small.png" alt="ask mate logo"></a><br><br>
-        <table id="users_list">
+        <table id="users_list" >
             <tr>
                 <th><b>User name</b></th>
                 <th><b>Registration date</b></th>
