Registration page done

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,9 @@
         <form action="/login" id="login-page">
         <button type="submit">Login</button>
          </form>
+         <form action="/registration">
+             <button type="submit">Registration</button>
+         </form>
         {% endif %}
         <form action="/list" style="display: inline-block">
             <label for="sort_by">Sort by:</label>
