html user page prepared

--- a/templates/users_list.html
+++ b/templates/users_list.html
@@ -11,7 +11,7 @@
 <head>
     <link rel="stylesheet" href="static/style.css">
     <meta charset="UTF-8">
-    <title>ASK MATE by Marcin, Marcin & Tomek</title>
+    <title>ASK MATE - Users list</title>
 </head>
     <body>
         <a href="/"><img src="/static/logo-small.png" alt="ask mate logo"></a><br><br>
