finished binding to user and reputation gain / lose

--- a/templates/index.html
+++ b/templates/index.html
@@ -68,16 +68,16 @@
             {% endfor %}
         </table><br>
         <div>
-            <form action="/list" method="post" style="display: inline-block">
+            <form action="/list" style="display: inline-block">
                 <button type="submit">All questions</button>
             </form>
             {% if message %}
-            <form action="/users" method="post" style="display: inline-block">
+            <form action="/users" style="display: inline-block">
                 <button type="submit">All users</button>
             </form>
             {% endif %}
             <span class="tab"></span>
-            <form action="/tags" method="post" style="display: inline-block">
+            <form action="/tags" style="display: inline-block">
                 <button type="submit">Tags list</button>
             </form>
         </div>
