--- a/templates/users_list.html
+++ b/templates/users_list.html
@@ -36,7 +36,7 @@
             {% endfor %}
         </table><br>
         <div>
-            <form action="/" method="post">
+            <form action="/">
                 <button type="submit">Back to main page</button>
             </form>
         </div>
