--- a/templates/search.html
+++ b/templates/search.html
@@ -75,11 +75,11 @@
             {% endfor %}
             </table><br>
         <div>
-            <form action="/list" method="post" style="display: inline-block">
+            <form action="/list" style="display: inline-block">
                 <button type="submit">All questions</button>
             </form>
             <span class="tab"></span>
-            <form action="/tags" method="post" style="display: inline-block">
+            <form action="/tags" style="display: inline-block">
                 <button type="submit">Tags list</button>
             </form>
         </div>
